; ModuleID = '/home/carl/AnghaBench/zfs/module/icp/asm-x86_64/aes/extr_aeskey.c_rijndael_key_setup_enc_amd64.c'
source_filename = "/home/carl/AnghaBench/zfs/module/icp/asm-x86_64/aes/extr_aeskey.c_rijndael_key_setup_enc_amd64.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @rijndael_key_setup_enc_amd64(i32* %0, i32* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32 %2, i32* %7, align 4
  %8 = load i32, i32* %7, align 4
  switch i32 %8, label %27 [
    i32 128, label %9
    i32 192, label %15
    i32 256, label %21
  ]

9:                                                ; preds = %3
  %10 = load i32*, i32** %6, align 8
  %11 = getelementptr inbounds i32, i32* %10, i64 0
  %12 = bitcast i32* %11 to i8*
  %13 = load i32*, i32** %5, align 8
  %14 = call i32 @aes_encrypt_key128(i8* %12, i32* %13)
  store i32 10, i32* %4, align 4
  br label %29

15:                                               ; preds = %3
  %16 = load i32*, i32** %6, align 8
  %17 = getelementptr inbounds i32, i32* %16, i64 0
  %18 = bitcast i32* %17 to i8*
  %19 = load i32*, i32** %5, align 8
  %20 = call i32 @aes_encrypt_key192(i8* %18, i32* %19)
  store i32 12, i32* %4, align 4
  br label %29

21:                                               ; preds = %3
  %22 = load i32*, i32** %6, align 8
  %23 = getelementptr inbounds i32, i32* %22, i64 0
  %24 = bitcast i32* %23 to i8*
  %25 = load i32*, i32** %5, align 8
  %26 = call i32 @aes_encrypt_key256(i8* %24, i32* %25)
  store i32 14, i32* %4, align 4
  br label %29

27:                                               ; preds = %3
  br label %28

28:                                               ; preds = %27
  store i32 0, i32* %4, align 4
  br label %29

29:                                               ; preds = %28, %21, %15, %9
  %30 = load i32, i32* %4, align 4
  ret i32 %30
}

declare dso_local i32 @aes_encrypt_key128(i8*, i32*) #1

declare dso_local i32 @aes_encrypt_key192(i8*, i32*) #1

declare dso_local i32 @aes_encrypt_key256(i8*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
